objects/AS_CPP__c.object
<CustomObject>
    <fields>
        <fullName>Account_Last_Activity_Date__c</fullName>
        <label>Account Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_LBs__c</fullName>
        <label>Annual LBs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Usage_in_UOM__c</fullName>
        <label>Annual Usage in UOM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPP_CPP_Number__c</fullName>
        <label>CPP:CPP Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPP_Created_Date__c</fullName>
        <label>CPP:Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPP_Created_by_Name__c</fullName>
        <label>CPP:Created by Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPP_Last_Modified__c</fullName>
        <label>CPP:Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPP_Modified_by_Name__c</fullName>
        <label>CPP:Last Modified by Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Ship_To__c</fullName>
        <label>Customer Ship To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Sales__c</fullName>
        <label>Estimated Sales</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <label>FOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Manager_Name__c</fullName>
        <label>General Manager Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Cpp_Review__c</fullName>
        <label>Manager Cpp Review</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pkg__c</fullName>
        <label>Pkg</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <label>Producer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Name__c</fullName>
        <label>Sales Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Report_Name__c</fullName>
        <description>Name of Source Report: SouthEast, South Central,, etc.</description>
        <label>Source Report Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>$UOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>per_UOM__c</fullName>
        <label>$ per UOM</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
</CustomObject>